Update for avoiding horizontal scroll

--- a/packages/mars-theme/src/components/index.css
+++ b/packages/mars-theme/src/components/index.css
@@ -10,6 +10,10 @@
     --color-white: #FFF;
 }
 
+body {
+    overflow-x: hidden !important;
+}
+
 p {
     font-size: inherit;
     line-height: inherit;
